--- a/app/src/main/res/layout/choices_row_item.xml
+++ b/app/src/main/res/layout/choices_row_item.xml
@@ -25,6 +25,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/delete"
-        android:src="@android:drawable/ic_delete" />
+        android:src="@drawable/ic_delete" />
 
 </RelativeLayout>
