--- a/app/src/main/res/layout/questions_row_item.xml
+++ b/app/src/main/res/layout/questions_row_item.xml
@@ -14,19 +14,21 @@
         android:layout_alignParentStart="true"
         android:textSize="18sp"
         android:text="Sample Row Item"
-        android:layout_toLeftOf="@+id/ivStart"
-        android:layout_toStartOf="@+id/ivStart"
+        android:layout_toLeftOf="@+id/ivEdit"
+        android:layout_toStartOf="@+id/ivEdit"
         android:padding="8dp" />
 
     <ImageView
-        android:id="@+id/ivStart"
+        android:id="@+id/ivEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/delete"
+        android:contentDescription="@string/edit"
         android:layout_toLeftOf="@+id/ivDelete"
         android:layout_toStartOf="@+id/ivDelete"
-        android:src="@android:drawable/ic_media_play" />
+        android:src="@drawable/ic_edit"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"/>
 
     <ImageView
         android:id="@+id/ivDelete"
@@ -36,6 +38,6 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/delete"
-        android:src="@android:drawable/ic_delete" />
+        android:src="@drawable/ic_delete" />
 
 </RelativeLayout>
